<resources>
    <string-array name="PatientInfo">
        <item>علایم حیاتی</item>
        <item>بیماری ها</item>
        <item>دارو ها</item>
        <item>آلرژی ها</item>
        <item>واکسن ها</item>
        <item>آزمایشات و گزارشات پزشکی</item>
        <item>اعمال جراحی</item>
        <item>سابقه بیماری گذشته</item>
        <item>سابقه خانوادگی</item>
        <item>سابقه اجتماعی</item>
        <item>اشخاص اورژانس</item>
    </string-array>
    <string name="app_name">مدکس هاب</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="error_occured">بروز خطا، لطفا مجددا سعی کنید!!</string>
    <string name="downloading">در حال دانلود…</string>
    <string name="loading">در حال بارگزاری…</string>
    <string name="alert_exit">کلید بازگشت را مجددا فشار دهید</string>
    <string name="last_version_installed">شما به آخرین نسخه دسترسی دارید.</string>
    <string name="search">جستجو</string>
    <string name="appointment">تعیین وقت</string>
    <string name="medical_record">سابقه پزشکی</string>
    <string name="health_state">ثبت وضعیت سلامتی</string>
    <string name="my_doctors">پزشکان من</string>
    <string name="pills_reminder">یادآور داروها</string>
    <string name="questions">پرسش و پاسخ</string>
    <string name="doctors_feed">مطالب روز پزشکان</string>
    <string name="private_chat">گفتگوی خصوصی</string>
    <string name="search_apointments">جستجو و نوبت گیری</string>
    <string name="canceled_apointments">ویزیت های لغو شده</string>
    <string name="apointments">نوبت گیری</string>
    <string name="past_apointments">ویزیت های پیشین</string>
    <string name="future_apointments">ویزیت های پیش رو</string>
    <string name="sat">ش</string>
    <string name="sun">ی</string>
    <string name="mon">د</string>
    <string name="tus">س</string>
    <string name="wed">چ</string>
    <string name="thu">پ</string>
    <string name="fri">ج</string>
    <string name="drug_name">نام دارو</string>
    <string name="amount">مقدار مصرف</string>
    <string name="time">زمان</string>
    <string name="term">شرایط</string>
    <string name="TajvizKonande">تجویز کننده</string>
    <string name="DateOfBirth">تاریخ تولد: </string>
    <string name="EmergCall">تماس ضروری : </string>
    <string name="Tell">تلفن: </string>
    <string name="if_not_registered"><![CDATA[<p>اگر حساب کاربری ندارید می توانید از<font color="#4278c7">اینـجــا </font>ثبت نام کنید</p>]]></string>
    <string name="if_befor_registered"><![CDATA[<p>اگر قبل ثبت نام کرده اید : <font color="#4278c7">وارد شوید</font></p>]]></string>
    <string name="error_username_null">نام کاربری نمی تواند خالی باشد!</string>
    <string name="error_password_null">رمز عبور نمی تواند خالی باشد!</string>
    <string name="connection_error">خطا در اتصال به اینترنت!</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="wrong_birth_year">سال تولد صحیح نیست</string>
    <string name="wrong_birth_month">ماه تولد صحیح نیست</string>
    <string name="wrong_birth_day">روز تولد صحیح نیست</string>
    <string name="register">ثبت نــام</string>
    <string name="nameIsNull">نام را وارد کنید.</string>
    <string name="familyIsNull">نام خانوادگی را وارد کنید.</string>
    <string name="phoneIsNull">تلفن را وارد کنید.</string>
    <string name="passIsNull">گذرواژه را وارد کنید.</string>
    <string name="repassIsNull">تکرار گدرواژه را وارد کنید.</string>
    <string name="passRepass">تکرار گذرواژه با گذرواژه مطابقت ندارد.</string>
    <string name="selectProvince">استان را انتخاب کنید.</string>
    <string name="selectCity">شهر را انتخاب کنید.</string>
    <string name="insertBirthDay">تاریخ تولد را وارد کنید.</string>
    <string name="t_doctor_name_1">دکتر علی محمدی</string>
    <string name="t_doctor_name_2">دکتر مجتبی ملکی</string>
    <string name="t_doctor_name_3">دکتر محسن احمدی</string>
    <string name="fouded_items">نتایج یافت شده</string>
    <string name="year">سال</string>
    <string name="specialty">"تخصص: "</string>
    <string name="specialty2">"فوق تخصص: "</string>
    <string name="address">"آدرس: "</string>
    <string name="date">"تاریخ: "</string>
    <string name="period">"ساعت: "</string>
    <string name="distance_from_here">"فاصله از موقعیت کنونی:"</string>
    <string name="hour">"ساعت "</string>
    <string name="day">"روز "</string>
    <string name="about_us">درباره ما</string>
    <string name="about_me">درباره من</string>
    <string name="messages">پیام ها</string>
    <string name="new_message">یک پیام جدید!</string>
    <string name="walkthrough1_heading">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="walkthrough1_discription">It is a long established fact that a reader will be distracted by the readable content.</string>
    <string name="cancel">انصراف</string>
    <string name="submit">تایید</string>
    <string name="choose_appointment_date">تاریخ ویزیت را مشخص کنید</string>
    <string name="visit_time_full">زمان ویزیت پر شده</string>
    <string name="visit_time_past">زمان ویزیت گذشته</string>
    <string name="visit_time_locked">امکان رزور این زمان وجود ندارد</string>
    <string name="appointment_saved">نوبت با موفقیت برای شما ثبت شد!</string>
    <string name="exit">خروج</string>
    <string name="intro_text_1_2">هرکجا که هستید از راهنمایی های بهترین پزشکان کمک بگیرید!</string>
    <string name="intro_text_1_1">مدکس هاب، اولین شبکه پزشکان و بیماران در کشور</string>
    <string name="signup">ثبت نام</string>
    <string name="make_appointment">وقت دهی</string>
    <string name="appointment_deleted">نوبت ویزیت با موفقیت حذف شد!</string>
    <string name="choose_start_date">تاریخ شروع را انتخاب کنید</string>
    <string name="disease_item_saved">بیماری برای شما ثبت شد</string>
    <string name="drug_item_saved">دارو برای شما ثبت شد</string>
    <string name="allergies_item_saved">آلرژی برای شما ثبت شد</string>
    <string name="vaccine_item_saved">واکسن برای شما ثبت شد</string>
    <string name="reports_item_saved">گزارش پزشکی برای شما ثبت شد</string>
    <string name="surgery_item_saved">عمل جراحی برای شما ثبت شد</string>
    <string name="past_records_item_saved">سابقه بیماری برای شما ثبت شد</string>
    <string name="family_history_item_saved">سابقه خانوادگی برای شما ثبت شد</string>
    <string name="social_history_item_saved">سابقه اجتماعی برای شما ثبت شد</string>
    <string name="emergency_member_item_saved">شخص اورژانس برای شما ثبت شد</string>
    <string name="disease_item_removed">بیماری حذف شد</string>
    <string name="drug_item_removed">دارو حذف شد</string>
    <string name="allergies_item_removed">آیتم آلرژی حذف شد</string>
    <string name="vaccine_item_removed">واکسن حذف شد</string>
    <string name="reports_item_removed">گزارش پزشکی حذف شد</string>
    <string name="surgery_item_removed">آیتم جراحی حذف شد</string>
    <string name="past_records_item_removed">سابقه بیماری حذف شد</string>
    <string name="family_history_item_removed">سابقه خانوادگی حذف شد</string>
    <string name="social_history_item_removed">سابقه اجتماعی حذف شد</string>
    <string name="emergency_member_item_removed">شخص اورژانس حذف شد</string>
    <string name="delete_item">حذف آیتم</string>
    <string name="ask_for_delete_item">آیا از حذف این آیتم مطمئن هستید؟</string>
    <string name="first_diagnosis_date">تاریخ اولین تشخیص</string>
    <string name="choose_level">انتخاب سطح</string>
    <string name="yes">دارد</string>
    <string name="no">ندارد</string>
    <string name="no_activity">بدون تحرک</string>
    <string name="low_activity">کم</string>
    <string name="med_activity">متوسط</string>
    <string name="high_activity">زیاد</string>
    <string name="super_high_activity">خیلی زیاد</string>
    <string name="activity_level">سطح فعالیت</string>
    <string name="edit">ویرایش</string>
    <string name="your_code">"کد شما: "</string>
    <string name="birth_date">"تاریخ تولد: "</string>
    <string name="gender">"جنسیت: "</string>
    <string name="tall">"قد: "</string>
    <string name="weight">"وزن: "</string>
    <string name="blood_type">"گروه خونی: "</string>
    <string name="age">"سن  "</string>
    <string name="noAnswerForThisQ">تاکنون برای این سوال پاسخی ارائه نشده است.</string>
    <string name="Iaccept">تایید می کنم</string>
    <string name="noAccept">عدم تایید</string>
    <string name="accepted">کاربرانی که تایید کرده اند:  </string>
    <string name="countOfAnswers">\u00A0\u00A0\u00A0پاسخ ارائه شده است</string>
    <string name="dashboard">داشبورد</string>
    <string name="your_question_added_successfully">سوال شما ثبت شد!</string>
    <string name="search_text">دکتر های حاضر در مدکس را جستجو کرده، و رزرو وقت را در سیستم انجام دهید.</string>
    <string name="health_tips">نکات سلامت</string>
    <string name="last_questions">آخرین سوالات</string>
    <string name="complete_question">متن کامل سوال</string>
    <string name="public_questions">پرسش های عمومی</string>
    <string name="my_questions">پرسش های من</string>
    <string name="latest_questions">جدیدترین سوالات</string>
    <string name="no_question_found">هیچ سوالی یافت نشد</string>
    <string name="fill_in_the_blanks">لطفا همه فیلدها را وارد کنید.</string>
    <string name="ask_question">پرسیدن سوال</string>
    <string name="salamatName">سلامت نامه</string>
    <string name="search_hospital">جستجوی مراکز درمانی</string>
    <string name="select_province_and_city_first">ابتدا استان و شهر را انتخاب کنید</string>
    <string name="title_home">مشاوره آنلاین</string>
    <string name="title_appointment">ویزیت</string>
    <string name="pills">یاداور دارو</string>
    <string name="buy">با پرداخت</string>
    <string name="title_question">دریافت مشاوره</string>
    <string name="free">رایگان</string>
    <string name="title_free_question">پرسیدن سوال</string>
    <string name="boards">بردهای تخصصی</string>
    <string-array name="laboratory_type">
        <item>همه</item>
        <item>آزمايشگاه پاتوبيولوژِي</item>
        <item>آزمايشگاه ژنتيک</item>
        <item>آزمايشگاه قارچ شناسي</item>
        <item>آزمايشگاه ويروس شناسي</item>
    </string-array>
    <string-array name="radiology_type">
        <item>همه</item>
        <item>راديولوژي</item>
        <item>سي تي اسکن</item>
        <item>ام-ار-آي-MRI</item>
        <item>سونوگرافي</item>
        <item>سنجش تراکم استخوان</item>
        <item>پزشکي هسته اي</item>
        <item>راديولوژي دهان،فک و صورت</item>

    </string-array>
    <string-array name="clinic_type">
        <item>همه</item>

        <item>کلينيک ترک اعتياد</item>
        <item>کلينيک پوست و مو و زيبايي</item>
        <item>کلينيک تغذيه و رژيم درماني</item>
        <item>کلينيک دندانپزشکي</item>
        <item>کلينيک جراحي محدود</item>
        <item>کلينيک جامع ژنتيک</item>
        <item>کلينيک چشم پزشکي</item>

    </string-array>
    <string-array name="hospital_type">
        <item>همه</item>

        <item>بيمارستان دولتي</item>
        <item>بيمارستان خصوصي</item>
        <item>بيمارستان خيريه</item>

    </string-array>
    <string-array name="pharmacy_type">
        <item>همه</item>

        <item>داروخانه هاي شبانه روزي</item>
        <item>داروخانه هاي روزانه</item>
        <item>داروخانه هاي دولتي</item>

    </string-array>
    <string name="attachments">پیوست ها</string>
    <string name="suggestions">پیشنهادات و انتقادات</string>
    <string name="camera">دوربین</string>
    <string name="select_from_gallery">افزودن از گالری</string>
    <string name="select_please">انتخاب کنید :</string>
    <string name="label_tag">تگ های خود را با " , " جدا کرده و وارد کنید.</string>
    <string name="label_subject">عنوان</string>
    <string name="label_message">شرح</string>
</resources>